--- a/src/main/resources/templates/data-monitoring.html
+++ b/src/main/resources/templates/data-monitoring.html
@@ -12,7 +12,7 @@
     <!-- date picker css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.standalone.min.css"/>
     <!--<link rel="stylesheet" th:href="@{/css/style.css}"/>-->
-    <link rel="stylesheet" th:href="@{/css/loading.css}"/>
+    <!--<link rel="stylesheet" th:href="@{/css/loading.css}"/>-->
     <!-- trend graph -->
     <link rel="stylesheet" th:href="@{/css/trend-graph.css}"/>
     <link rel="stylesheet" th:href="@{/css/tree-graph.css}"/>
@@ -34,6 +34,7 @@
             border-radius: 4px;
             cursor: pointer;
         }
+
     </style>
 </head>
 
@@ -142,13 +143,13 @@
                             <div class="form-group">
                                  <h3><span class="badge badge-pill badge-default">기간설정</span></h3>
                                  <div class="input-group date">
-                                 <input type="text" class="form-control" id="datepicker-start" placeholder="MM/DD/YYYY">
-                                     <input type="text" class="form-control" id="datepicker-end" placeholder="MM/DD/YYYY">
+                                 <input type="text" class="form-control" id="datepicker-start" placeholder="YYYY/MM/DD">
+                                     <input type="text" class="form-control" id="datepicker-end" placeholder="YYYY/MM/DD">
                             </div>
 
                         <img src="../images/calendar.png" alt="">
-                        <input class="form-control mr-sm-2" text="갤럭시 노트 8" type="text" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Search</button>
+                        <input id="txtSearch" class="form-control mr-sm-2" text="갤럭시 노트 8" type="text" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-danger my-2 my-sm-0" type="submit" id="btnSearch">Search</button>
                     </form>
 
                 </div>
@@ -159,8 +160,25 @@
         </div>
         <!--Search area-->
         <!--Table area-->
-        <table class="table">
+
+        <!--tab-->
+    <table class="table">
+        <tr>
             <thead class="thead-inverse">
+            <tr>
+                <th scope="row"><a href="" id="all">전체</a></th>
+                <th scope="row"><a href="" id="ppumppo">뽐뿌</a></th>
+                <th scope="row"><a href="">디시인사이드</a></th>
+                <th scope="row"><a href="">지후맘</a></th>
+                <th scope="row"><a href="">맘스홀릭</a></th>
+            </tr>
+            </thead>
+        </tr>
+    </table>
+    <div style="height:200px;overflow: scroll;">
+        <table class="table" id="searchResult" style="">
+            <thead class="thead-inverse">
+
             <tr>
                 <th>구분</th>
                 <th>콘텐츠</th>
@@ -169,48 +187,46 @@
                 <th>게시일</th>
             </tr>
             </thead>
-            <tbody>
-            <tr>
-                <th scope="row">전체</th>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <th scope="row">뽐뿌</th>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <th scope="row">디시인사이드</th>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <th scope="row">지후맘</th>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <th scope="row">맘스홀릭</th>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
+            <tbody id="searchResultData">
+            <!--<tr>-->
+                <!--<th scope="row"><a href="">전체</a></th>-->
+                <!--<td></td>-->
+                <!--<td></td>-->
+                <!--<td></td>-->
+            <!--</tr>-->
+            <!--<tr>-->
+                <!--<th scope="row"><a href="">뽐뿌</a></th>-->
+                <!--<td></td>-->
+                <!--<td></td>-->
+                <!--<td></td>-->
+            <!--</tr>-->
+            <!--<tr>-->
+                <!--<th scope="row"><a href="">디시인사이드</a></th>-->
+                <!--<td></td>-->
+                <!--<td></td>-->
+                <!--<td></td>-->
+            <!--</tr>-->
+            <!--<tr>-->
+                <!--<th scope="row"><a href="">지후맘</a></th>-->
+                <!--<td></td>-->
+                <!--<td></td>-->
+                <!--<td></td>-->
+            <!--</tr>-->
+            <!--<tr>-->
+                <!--<th scope="row"><a href="">맘스홀릭</a></th>-->
+                <!--<td></td>-->
+                <!--<td></td>-->
+                <!--<td></td>-->
+            <!--</tr>-->
             </tbody>
         </table>
+    </div>
         <!--Table area-->
         <!-- Graph area -->
         <div class="row mx-auto">
 
 
             <div class="col-9  mx-auto" id="issue-summary">
-
-
-
 
 
 
@@ -294,29 +310,77 @@
 <!-- date picker -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/js/bootstrap-datepicker.min.js"></script>
 <script>
-    $('#datepicker-start').datepicker();
-    $('#datepicker-end').datepicker();
-    // TODO: form product search
-    $('#form-product-search').submit(function(event){
-        //event.preventDefault();
-
+    $('#datepicker-start').datepicker({
+        format: 'yyyy-mm-dd'
     });
-    $("#search-button").click(function(){
-        //$(".se-pre-con").fadeIn(1000);
-        $('.card-deck,#top-ten-search').fadeOut(1000,function(){
-            //$(".se-pre-con").fadeOut(3000);
+    $('#datepicker-end').datepicker({
+        format: 'yyyy-mm-dd'
+    });
+
+    // TODO search data
+    var BASE_URL = 'http://localhost:8080/rest';
+    var data = [];
+    var ppumppo = [];
+
+    $("#btnSearch").click(function(e){
+        e.preventDefault();
+        var boardTitle = $("#txtSearch").val();
+        var startDate = $("#datepicker-start").val();
+        var endDate = $("#datepicker-end").val();
+
+
+        $.ajax({
+            url: BASE_URL+`/data-monitoring/getBoards?board_title=${boardTitle}&start_date=${startDate}&end_date=${endDate}`,
+
+        }).done(function(res) {
+            console.log(res);
+            for(var i=0; i<res.data.length; i++){
+                console.log(res.data[i]);
+                $("#searchResultData").append(`
+                <tr>
+                    <th scope="row"><a href="">${res.data[i].boardTitle}</a></th>
+                    <td>${res.data[i].boardView}</td>
+                    <td>${res.data[i].boardRecommand}</td>
+                    <td>${res.data[i].insertDate}</td>
+                 </tr>
+                `);
+
+            }
+
+            data.push(res.data);
+
+
         });
-        $('#graph-result').show();
 
-    });
-</script>
-<script>
-    $(function(){
-        $('.clickable').on('click',function(){
-            var effect = $(this).data('effect');
-            $(this).closest('.panel')[effect]();
-        })
+
+
+
+
     })
+
+    $("#ppumppo").click(function(e){
+
+        e.preventDefault();
+        for(var i =0 ; i<data.length; i++){
+
+            console.log(data.data.type)
+            ppumppo.push(data.data);
+        }
+
+        console.log("ppumppo=> ",ppumppo)
+        $("#searchResultData").append(`
+                <tr>
+                    <th scope="row"><a href="">${ppumppo.boardTitle}</a></th>
+                    <td>${ppumppo.boardView}</td>
+                    <td>${ppumppo.boardRecommand}</td>
+                    <td>${ppumppo.insertDate}</td>
+                 </tr>
+                `);
+
+    })
+
+
+
 
 </script>
 
@@ -325,10 +389,7 @@
 <div class="se-pre-con"></div>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
-<script th:src="@{/js/loading.js}"></script>
-<!-- trend graph -->
-<script th:src="@{/js/trend-graph.js}"></script>
-<script th:src="@{/js/tree-graph.js}"></script>
+<!--<script th:src="@{/js/loading.js}"></script>-->
 <script>
     // highchart
 
